--- a/_data/2021/law/faculty.yml
+++ b/_data/2021/law/faculty.yml
@@ -9,6 +9,6 @@
   website: https://www.maastrichtuniversity.nl/catalina.goanta
 
 - name: Rūta Liepiņa
-  image: 
+  image: /assets/images/rūtaLiepiņa.jpeg
   bio: "..."
   website: https://www.maastrichtuniversity.nl/p70067150
