--- a/_data/2021/law/faculty.yml
+++ b/_data/2021/law/faculty.yml
@@ -10,5 +10,5 @@
 
 - name: Rūta Liepiņa
   image: /assets/images/rūtaLiepiņa.jpeg
-  bio: "Rūta Liepiņa is an Assistant Professor in Digital Legal Studies at the Faculty of Law. She holds a PhD degree from European University Institute. Her research interests revolve around the topics of legal reasoning, argumentation, and data science."
+  bio: "Rūta Liepiņa is an Assistant Professor in Digital Legal Studies at the Faculty of Law. She holds a PhD degree from European University Institute. Her research interests revolve around the topics of legal reasoning, argumentation, and data science. During her PhD studies she was a visiting scholar at University of Bologna, Utrecht University, and Swansea University. She is an active member of the AI and law community and regularly participates in the leading conferences and workshops on these topics including ICAIL, JURIX, NLLP, ASAIL, and others."
   website: https://www.maastrichtuniversity.nl/p70067150
