--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -1,7 +1,12 @@
 - date: All times are in Eastern Daylight Time
 
+- date: 2021-06-12
+  events:
+    -name: "10:00am - 5:00pm TBD"
+
 - date: 2021-06-13
   events:
+    - name: "10:00am - 5:00pm TBD"
     - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2021-06-14
