--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -32,7 +32,7 @@ speakers:
 participants: 
   title: Participants
   people:
-    - name: Coming Soon!
+    - name: Coming Soon - Check out our Apply page!
     
 organizers:
   title: Organizer
