--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -53,9 +53,9 @@
   bio: "Gizem Kaya is a master's student in the International Relations department at Kadir Has University. She has a Bachelor's degree in Political Science and International Relations from Yildiz Technical University. Her research interests include civil war, armed groups, and post-conflict peacebuilding. Currently, she aims to employ computational text analysis and network analysis methods in her research by focusing on natural resources' role in the Colombian peace process. She is also a passionate Spanish and R learner."
   website: https://www.linkedin.com/in/gizem-kaya-0a7a5a159/
   
-- name: 
-  image: 
-  bio: 
+- name: Ahmet Yusuf	AYDIN
+  image: /assets/images/1j8NOnCetQsMYYpoK5Am3otH7KX4r8v5b.jpeg
+  bio: "Ahmet Yusuf AYDIN is a postgraduate student at the Department of Economics, University of Warwick. He holds BA and MA degrees in Economics from Bogazici Unveristy. His research interests are applied microeconomics, firm dynamics, and environmental economics."
   website: 
   
 - name: 
