--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -58,9 +58,9 @@
   bio: "Ahmet Yusuf AYDIN is a postgraduate student at the Department of Economics, University of Warwick. He holds BA and MA degrees in Economics from Bogazici Unveristy. His research interests are applied microeconomics, firm dynamics, and environmental economics."
   website: 
   
-- name: 
-  image: 
-  bio: 
+- name: Büşra	Mahmutoğlu
+  image: /assets/images/1a48vTWJ3lQfdOVFAyD4XGBCb3orMeUvq.png
+  bio: "Büşra Mahmutoğlu is currently a research assistant at New York University Abu Dhabi's Social Research and Public Policy Program. She has a Master's degree in Political Science from Sabancı University and a Bachelor's degree in Political Science and International Relations from Boğaziçi University. Her research areas include political sociology, social movements and culture. She is also broadly interested in computational social sciences methods."
   website: 
   
 - name: 
