--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -63,15 +63,15 @@
   bio: "Büşra Mahmutoğlu is currently a research assistant at New York University Abu Dhabi's Social Research and Public Policy Program. She has a Master's degree in Political Science from Sabancı University and a Bachelor's degree in Political Science and International Relations from Boğaziçi University. Her research areas include political sociology, social movements and culture. She is also broadly interested in computational social sciences methods."
   website: 
   
-- name: 
-  image: 
-  bio: 
-  website: 
+- name: Özgür	Önal
+  image: /assets/images/1vs4ev1qE2GQ4wlvLyiOXiwMel12btsDy.jpeg
+  bio: "Özgür hold a Master of Design degree in Industrial Product Design with the thesis research in the field of “Human Centered Design” and BSc. degree in Computer Science Engineering. He has part-time lectured for the  “Information Design" course and psychology for the game design course in different universities before."
+  website: http://products.ozguronal.com/
   
-- name: 
-  image: 
-  bio: 
-  website: 
+- name: Çiğdem	Ünal
+  image: /assets/images/10Cc46e4icRfaAEucRzc5vRb5gvRSAGdJ.jpeg
+  bio: "Çiğdem is a PhD candidate in Political Science at the University of Pittsburgh. Her research interests include terrorism, its impact on voting behavior and political parties, and political participation in post-conflict societies. She completed her masters at the Sabanci University in the same field."
+  website: https://cigdemunal.com
   
 - name: 
   image: 
