--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -65,7 +65,7 @@
   
 - name: Özgür	Önal
   image: /assets/images/1vs4ev1qE2GQ4wlvLyiOXiwMel12btsDy.jpeg
-  bio: "Özgür hold a Master of Design degree in Industrial Product Design with the thesis research in the field of “Human Centered Design” and BSc. degree in Computer Science Engineering. He has part-time lectured for the  “Information Design" course and psychology for the game design course in different universities before."
+  bio: "Özgür hold a Master of Design degree in Industrial Product Design with the thesis research in the field of “Human Centered Design” and BSc. degree in Computer Science Engineering. He has part-time lectured for the  Information Design course and psychology for the game design course in different universities before."
   website: http://products.ozguronal.com/
   
 - name: Çiğdem	Ünal
