--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -73,10 +73,10 @@
   bio: "Çiğdem is a PhD candidate in Political Science at the University of Pittsburgh. Her research interests include terrorism, its impact on voting behavior and political parties, and political participation in post-conflict societies. She completed her masters at the Sabanci University in the same field."
   website: https://cigdemunal.com
   
-- name: 
-  image: 
-  bio: 
-  website: 
+- name: Selim	Yaman
+  image: /assets/images/11FyCqdFKXZEaTciHt4bu1y7Xzps7ZZnY.jpeg
+  bio: "I'm a Political Science PhD Student at American University's School of Public Affairs, specializing in political methodology and comparative politics with a focus on text analysis and machine learning. Substantively, my research focuses on political violence and military coups. I'm also a Fellow in the Center for Data Science at American University, doing editorial assistantship for Political Analysis."
+  website: https://selimyaman.github.io/
   
 - name: 
   image: 
