--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -78,21 +78,16 @@
   bio: "I'm a Political Science PhD Student at American University's School of Public Affairs, specializing in political methodology and comparative politics with a focus on text analysis and machine learning. Substantively, my research focuses on political violence and military coups. I'm also a Fellow in the Center for Data Science at American University, doing editorial assistantship for Political Analysis."
   website: https://selimyaman.github.io/
   
-- name: 
-  image: 
-  bio: 
-  website: 
+- name: Yasemin	Taskin-Alp
+  image: /assets/images/15GpcJqCjo3iUxp4VvsTxFj25pDnFkdss.jpeg
+  bio: "Yasemin Taskin-Alp is a Ph.D. candidate in Sociology at the University of California, San Diego. In her dissertation, she examines Islamic preschools in Turkey using mixed methods. She has a background in economics, history, and mathematics. Prior to graduate school she worked in policy and research centers in Istanbul."
+  website: https://sociology.ucsd.edu/people/graduate-students/yasemin-taskin-alp.html
   
 - name: 
   image: 
   bio: 
   website: 
 
-- name: 
-  image: 
-  bio: 
-  website: 
-  
 - name: 
   image: 
   bio: 
