--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -75,7 +75,7 @@
   
 - name: Selim	Yaman
   image: /assets/images/11FyCqdFKXZEaTciHt4bu1y7Xzps7ZZnY.jpeg
-  bio: "I'm a Political Science PhD Student at American University's School of Public Affairs, specializing in political methodology and comparative politics with a focus on text analysis and machine learning. Substantively, my research focuses on political violence and military coups. I'm also a Fellow in the Center for Data Science at American University, doing editorial assistantship for Political Analysis."
+  bio: "Selim Yaman is a Political Science PhD Student at American University's School of Public Affairs, specializing in political methodology and comparative politics with a focus on text analysis. Substantively, his research revolves around political violence and military coups. He’s also a Fellow in the Center for Data Science at American University, doing editorial assistantship for Political Analysis."
   website: https://selimyaman.github.io/
   
 - name: Yasemin	Taskin-Alp
