--- a/_data/2021/istanbul/participants.yml
+++ b/_data/2021/istanbul/participants.yml
@@ -83,9 +83,9 @@
   bio: "Yasemin Taskin-Alp is a Ph.D. candidate in Sociology at the University of California, San Diego. In her dissertation, she examines Islamic preschools in Turkey using mixed methods. She has a background in economics, history, and mathematics. Prior to graduate school she worked in policy and research centers in Istanbul."
   website: https://sociology.ucsd.edu/people/graduate-students/yasemin-taskin-alp.html
   
-- name: 
-  image: 
-  bio: 
+- name: Fuat Kına
+  image: /assets/images/1x4EOxOPx0FVtNfF_hMBh53zCi6ppmLia.png
+  bio: "Fuat is a PhD candidate at the Sociology Department of Koç University, and a researcher at the European Commission funded Social ComQuant project. He graduated with a B.S. degree in Economics from Boğaziçi University (2015) and received his master’s degree with quantitative research on the relationship between anti-immigrant attitudes and labor precarity in Europe (2018) from İstanbul Şehir University. He currently works on the relationship between social movements, their targets and social assistance programs. He is interested in advanced quantitative techniques on causal inference."
   website: 
 
 - name: 
