--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -8,7 +8,7 @@
   events:
     - name: "10:00am - 5:00pm TBD"
     - name: "5:00pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
-
+    
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
@@ -21,6 +21,7 @@
     - name: "1:45 - 2:45 Small group discussion of [case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
     - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
     - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
@@ -34,6 +35,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 Break"
+    - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-16
   name: Automated Text Analysis
@@ -45,6 +47,7 @@
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Group Exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-17
   name: Surveys in the Digital Age
@@ -59,6 +62,7 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-18
   name: Mass collaboration and machine learning
@@ -73,6 +77,7 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-19
   name: Day off
@@ -81,21 +86,24 @@
   name: Day off
 
 - date: 2021-06-21
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects and participate in SICSS Festival
   events:
-    - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
-    - name: "10:15 - 11:30 Research Speed Dating Maximally Similar Groups (*Zoom*)"
-    - name: "1:15 - 3:15 Research Speed Dating Maximally Dissimilar Groups (*Zoom*)"
-    - name: "3:15 - 3:30 Group Debrief (join research teams) (*Zoom*)"
+  - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-22
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects and participate in SICSS Festival
+  events:
+  - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-23
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects and participate in SICSS Festival
+  events:
+  - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-24
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects and participate in SICSS Festival
+  events:
+  - name: "4:00pm - 5:30pm Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-25
   name: Present group projects and/or participate in SICSS Festival
