--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -1,1 +1,22 @@
-- name:
+- name: Erdem Yörük
+  image: /assets/images/ErdemYörük.jpg
+  bio: "Erdem Yörük is an Associate Professor inthe Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford. He is the principal investigator of the ERC-funded project “Emerging Welfare” (The New Politics of Welfare: Towards an “Emerging Markets” Welfare State Regime) (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview. He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University. His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP. His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, 'The Politics of the Welfare State in Turkey' is forthcoming from the University of Michigan Press."
+  website: https://scholar.google.com/citations?user=WHMhrZcAAAAJ&hl=tr
+
+- name: 
+  image: 
+  bio: 
+  website: 
+  
+- name: 
+  image: 
+  bio: 
+  website: 
+
+- name: 
+  image: 
+  bio: 
+  website: 
+  
+
+
