--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -28,11 +28,12 @@
   events:
   
 - date: 2021-06-15
-  name: Text as Data
+  name: Natural Language Processing and Applications to Computational Social Science
   events:
+     - name: "**Tutorial Session**<br/> This talk will introduce the participants to basic concepts and techniques of Natural Language Processing in an interactive fashion and will highlight aspect to Turkish that make it a challenge. It will then provide an overview of NLP applications in social sciences."
 
 - date: 2021-06-16
-  name: Networks and Bots
+  name: TBA
   events:
   
 - date: 2021-06-17
