--- a/_data/2021/istanbul/speakers.yml
+++ b/_data/2021/istanbul/speakers.yml
@@ -1,3 +1,54 @@
+- name: Erdem Yörük
+  image: /assets/images/ErdemYörük.jpg
+  bio: “Erdem Yörük is an Associate Professor inthe Department of Sociology at Koç University and an Associate Member in the Department of Social Policy and Intervention at University of Oxford. He is the principal investigator of the ERC-funded project “Emerging Welfare” (The New Politics of Welfare: Towards an “Emerging Markets” Welfare State Regime) (emw.ku.edu.tr). He is also a member of Young Academy of Europe and an associate editor of EuropeanReview. He holds a PhD from the Department of Sociology at Johns HopkinsUniversity (2012), an MA in Sociology and a BSc in Electrical and Electronics Engineering from Boğaziçi University. His work focuses on social welfare and social policy, social movements, political sociology, and comparative and historical sociology. His work has been supported by the National Science Foundation (NSF), Ford Foundation, European Commission Marie Curie CIG, European Research Council, European Commission Twinning Action Grants (socialcomquant.ku.edu.tr), and the Science Academy of Turkey BAGEP. His articles have appeared in World Development, Governance, Politics & Society, New Left Review, Current Sociology, South Atlantic Quarterly, International Journal of Communication, Social Policy and Administration, Social Indicators Research, among others. His book, ‘The Politics of the Welfare State in Turkey’ is forthcoming from the University of Michigan Press.”
+  website: https://scholar.google.com/citations?user=WHMhrZcAAAAJ&hl=tr
+
+- name: Kemal Oflazer
+  image: /assets/images/KemalOflazer.jpg
+  bio: “Kemal Oflazer received his PhD in Computer Science from Carnegie Mellon University in Pittsburgh, PA, USA, and his MS in Computer Science and BS in Electrical and Electronics Engineering degrees from Middle East Technical University in Ankara, Turkey. Heis currently a faculty member at Carnegie Mellon University – Qatar,
+        where he is also the Associate Dean for Research.  He has held visiting positions at
+        Computing Research Laboratory at New Mexico State University, and at
+        the Language Technologies Institute, Carnegie Mellon University,
+        Pittsburgh, PA. Prior to joining CMU-Qatar, he was on the faculties of
+        Sabanci University in Istanbul Turkey and Bilkent University in
+        Ankara, Turkey, 19 years.
+        Kemal Oflazer  is currently serving as an Associate Editor for
+         Frontiers in Artificial Intelligence and
+        ELEKTRIK(Turkish Journal of Electrical Engineering and Computer
+        Sciences), and has served or is currently serving on the Editorial Boards of
+        Computational Linguistics, Journal of AI Research, Machine
+        Translation, Research on Language and Computation, Natural Language
+        Engineering and Language Resources and Evaluation. He was  a Book
+        Reviews Editor for Natural Language Engineering and a member of the
+        advisory boards of  John Benjamins NLP Book Series and Springer Briefs
+        in NLP.  He also  served as the Program Co-Chair of ACL 2005 -- 43rd
+        Annual Meeting of the Association for Computational Linguistics, in 2005 and
+        as a Senior Area Chair or Area Chair for ACL  EMNLP, EACL and COLING conferences.
+        Over the last 30 years, Kemal Oflazer has worked extensively on
+        developing NLP techniques and computational resources
+        for Turkish with his collaborators and graduate students and has
+        published over 150 papers. He has
+        recently edited a compendium of work on Turkish language and speech
+        processing which has been published by
+        Springer (https://www.springer.com/gp/book/9783319901633,
+         http://www.andrew.cmu.edu/user/ko/toc.pdf, for a table of
+          contents.)  In addition to his long-standing interest in Turkish NLP, he has
+        recently been working on applying NLP in educational settings on
+        techniques such as interactive reading, question generation, question
+        similarity detection and  question answering on technical domains with
+        an eye towards developing automated course assistants.”
+  website: https://www.andrew.cmu.edu/user/ko/
+
 - name:
+  image:
+  bio:
+  website:
+
+- name:
+  image:
+  bio:
+  website:
+
+
 
 
