--- a/_data/2021/beijing/people.yml
+++ b/_data/2021/beijing/people.yml
@@ -59,7 +59,7 @@ localspeakers:
 
     - name: Nynke Niezink
       image: /assets/images/nynkeNiezink.jpg
-      bio: Nynke Niezink is an assistant professor in the Department of Statistics and Data Science. Prior to joining the department in 2018, she was a Ph.D. candidate at the University of Groningen. She has M.Sc. degrees in Applied Mathematics and in Behavioral and Social Sciences, and B.Sc. degrees in Mathematics and in Pedagogy and Educational Sciences. Her research interests include the development of statistical methods for network analysis, with applications in education, health sciences and management. Most recently she has been working on methods for criminal network data.
+      bio: Nynke Niezink is an assistant professor in the Department of Statistics and Data Science at Carnegie Mellon University. Prior to joining the department in 2018, she was a Ph.D. candidate at the University of Groningen. She has M.Sc. degrees in Applied Mathematics and in Behavioral and Social Sciences, and B.Sc. degrees in Mathematics and in Pedagogy and Educational Sciences. Her research interests include the development of statistical methods for network analysis, with applications in education, health sciences and management. Most recently she has been working on methods for criminal network data.
       website: http://www.stat.cmu.edu/~nynke/
 
     - name: Alex (Sandy) Pentland
