Andrés Castro Araújo bio

--- a/_data/2021/princeton/teaching_assistants.yml
+++ b/_data/2021/princeton/teaching_assistants.yml
@@ -8,6 +8,11 @@
   bio: Emily Cantrell is a doctoral student in Sociology and Social Policy at Princeton University. She received her bachelor’s degree from Denison University in 2017, where she designed her own major in Human Development and Social Policy with a focus on socioeconomic inequality in the United States. Prior to beginning her graduate work, Emily worked at Child Trends, a research organization that evaluates programs and policies to improve the lives of children and families. Her current projects include a collaboration to assess the predictability of life trajectories using hundreds of machine learning strategies, building on findings from the <a href="https://www.fragilefamilieschallenge.org/">Fragile Families Challenge</a>.
   website: https://www.linkedin.com/in/emily-cantrell/
 
+- name: Andrés Castro Araújo
+  image: /assets/images/Castro_Araujo.jpeg
+  bio: Andrés Castro Araújo is a doctoral student in Sociology at Duke University. Before coming to Duke, he received an MA in Quantitative Methods for the Social Sciences at Columbia University. His research interests include culture, economic sociology, and social networks. Currently he is using computational methods to understand the evolution of legal precedent in Colombia. He used to work as a researcher at the Center for the Study of Law, Justice and Society (Dejusticia) in Bogotá.
+  website: https://scholars.duke.edu/person/andres.castro.araujo
+
 - name: Megan Kang
   image: /assets/images/megan_kang.jpeg
   bio: Megan Kang is a PhD student in Sociology at Princeton University. She studies the consequences of violence on disadvantaged communities, with the goal of identifying effective and humane ways of reducing inequality in safety and well-being. Prior to joining Princeton, she was a Teach for America corps member in Detroit and then worked on a large-scale RCT aimed at reducing gun violence at the UChicago Crime Lab. Megan is interested in how computational social science can leverage qualitative insights, and is committed to finding ethical applications of AI in public policy. Her current projects involve using in-depth interviews to find out why the Fragile Families Challenge yielded poor predictions of youth outcomes and exploring the use of computer vision on police camera footage.
