Andrés Castro Araújo image correction

--- a/_data/2021/princeton/teaching_assistants.yml
+++ b/_data/2021/princeton/teaching_assistants.yml
@@ -9,7 +9,7 @@
   website: https://www.linkedin.com/in/emily-cantrell/
 
 - name: Andrés Castro Araújo
-  image: /assets/images/Castro_Araujo.jpeg
+  image: /assets/images/Castro_Araujo.png
   bio: Andrés Castro Araújo is a doctoral student in Sociology at Duke University. Before coming to Duke, he received an MA in Quantitative Methods for the Social Sciences at Columbia University. His research interests include culture, economic sociology, and social networks. Currently he is using computational methods to understand the evolution of legal precedent in Colombia. He used to work as a researcher at the Center for the Study of Law, Justice and Society (Dejusticia) in Bogotá.
   website: https://scholars.duke.edu/person/andres.castro.araujo
 
