--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -88,25 +88,33 @@
 - date: 2021-06-21
   name: Work on group projects and participate in SICSS Festival
   events:
+  - name: "9:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-22
   name: Work on group projects and participate in SICSS Festival
   events:
+  - name: "9:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-23
   name: Work on group projects and participate in SICSS Festival
   events:
+  - name: "9:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-24
   name: Work on group projects and participate in SICSS Festival
   events:
+  - name: "9:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Speaker TBD - live session to include Q&A and office hours"
 
 - date: 2021-06-25
-  name: Present group projects and/or participate in SICSS Festival
+  name: Present group projects and participate in SICSS Festival
   events:
-    - name: "12:00 - 4:00 Present group projects (*Zoom*)"
-    - name: "4:00 - 4:30 Debrief and conclusion"
+  - name: "9:00 - 12:00 TBD"
+  - name: "12:00 - 4:00 Present group projects (*Zoom*)"
+  - name: "4:00 - 4:30 Debrief and conclusion"
+  - name: "4:30 - 4:45 Break"
+  - name: "4:45 - 6:15 Closing Event" 
+    
