--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -1,3 +1,101 @@
-- date: 2021-06-14
+- date: All times are in Central European Summer Time
+
+- date: 2021-06-13
   events:
-    - name: "Schedule coming soon..."
+    - name: "17:00 Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
+
+- date: 2021-06-14
+  name: "<b>Introduction and Ethics</b>"
+  events:
+    - name: "12.30 - 13.00 Introduction and logistics: [Slides](https://drive.google.com/file/d/14YdMYr3_5HHOAcZS5eY_nyQkSQhnwi08/view?usp=sharing) (*Zoom*)"
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
+    - name: "14.00 - 14.30 Break"
+    - name: "14.30 - 15.30 Guest speaker (*Zoom*)"
+    - name: "15.30 - 15.45 Introduction to the group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day1-intro-ethics/activity/lesson_plan_ethics_participant.md) (*Zoom*)"
+    - name: "15.45 - 17.30 Group exercise: [Case study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf) (*Zoom*)"
+    - name: "17.30 - 17.45 Break"
+    - name: "17.45 - 19.00 Keynote speaker (*Zoom*)"
+    
+    
+- date: 2021-06-15
+  name: "<b>Digital Trace Data</b>"
+  events:
+    - name: "12.00 - 13.00 Guest speaker  (*Zoom*)"
+    - name: "13.00 - 13.15 Break"
+    - name: "13.15 - 14.15 Small group lunches (*Zoom*)"
+    - name: "14.15 - 14.45 Break"
+    - name: "14.45 - 15.00 Introduction to the group exercise (*Zoom*)"
+    - name: "15.00 - 18.00 Group exercise: [Lesson plan](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/maastricht/day-2-digital-trace-data-maastricht.md) (*Zoom*)"
+    - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
+    
+- date: 2021-06-16
+  name: "<b>Automated text analysis</b>"
+  events:
+    - name: "12.00 - 13.00 Guest speaker (*Zoom*)"
+    - name: "13.00 - 13.15 Break"
+    - name: "13.15 - 14.15 Small group lunches (*Zoom*)"
+    - name: "14.15 - 14.45 Break"
+    - name: "14.45 - 15.00 Introduction to the group exercise (*Zoom*)"
+    - name: "15.00 - 18.00 Group exercise: [Lesson Plan](https://compsocialscience.github.io/summer-institute/2020/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
+    - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
+    
+- date: 2021-06-17
+  name: "<b>Surveys in the Digital Age</b>"
+  events:
+    - name: "12.00 - 13.00 Guest speaker (*Zoom*)"
+    - name: "13.00 - 13.15 Break"
+    - name: "13.15 - 14.15 Small group lunches (*Zoom*)"
+    - name: "14.15 - 14.45 Break"
+    - name: "14.45 - 15.00 Introduction to the group exercise (*Zoom*)"
+    - name: "15.00 - 18.00 Group exercise: [Lesson Plan](https://docs.google.com/document/d/1pued03M2yJ4T_B-XyGJFWMmpLeU3oqOwLQLx-NEbHaE/edit?usp=sharing) (*Zoom*)"
+    - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
+    
+- date: 2021-06-18
+  name: "<b>Network Analysis in Law</b>"
+  events:
+    - name: "12.00 - 13.00 Lecture on network analysis [Slides](https://drive.google.com/file/d/1iZOVj0Y7aj762cEzFLp2hYajJiNCiqT2/view?usp=sharing) (*Zoom*)" 
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
+    - name: "14.00 - 14.30 Break"
+    - name: "14.30 - 16.00 Workshop: Introduction Gephi: [Lesson Plan](https://drive.google.com/file/d/1yjDA-Fyw1WT2-p65kvIfOzniX5ifaITI/view) (*Zoom*)"
+    - name: "16.00 - 16.30 Break"
+    - name: "16.30 - 18.30 Group exercise: [Lesson Plan](https://drive.google.com/file/d/1yjDA-Fyw1WT2-p65kvIfOzniX5ifaITI/view) (*Zoom*)"
+    - name: "18.30 - 19.00 Reporting back the results of group exercises (*Zoom*)"
+    
+- date: 2021-06-19
+  name: Day off
+  
+- date: 2021-06-20
+  name: Day off
+  
+- date: 2021-06-21
+  name: "<b>Work on group projects</b>"
+  events:
+    - name: "12.00 - 13.00 Project group formation (*Zoom*)"
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
+    - name: "17.00 - 18.00 Office hours (*Zoom*)"
+    
+- date: 2021-06-22
+  name: "<b>Work on group projects</b>"
+  events:
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
+    - name: "17.00 - 18.00 Office hours (*Zoom*)"
+
+- date: 2021-06-23
+  name: "<b>Work on group projects</b>"
+  events:
+    - name: "16.00 - 17.15 Panel Debate
+    - name: "18.00 - 19.00 Office hours (*Zoom*)"
+
+- date: 2021-06-24
+  name: "<b>Work on group projects</b>"
+  events:
+    - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
+    - name: "17.00 - 18.00 Office hourse (*Zoom*)"
+
+- date: 2021-06-25
+  name: "<b>Group Projects Presentations</b>"
+  events:
+    - name: "14.00 - 15.00 Group Project Presentation (*Zoom*)"
+    - name: "15.00 - 16.00 Break"
+    - name: "16.00 - 17.00 Group Project Presentation (*Zoom*)"
+    - name: "17.00 - 17.15 Closing remarks (*Zoom*)"
