--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -1,5 +1,4 @@
-- date: Provisional schedule 
-- date: All times are in Central European Summer Time
+- date: Provisional schecule. All times are in Central European Summer Time
 
 - date: 2021-06-13
   events:
