--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -83,7 +83,7 @@
 - date: 2021-06-23
   name: "<b>Work on group projects</b>"
   events:
-    - name: "16.00 - 17.15 Panel Debate
+    - name: "16.00 - 17.15 Panel Debate"
     - name: "18.00 - 19.00 Office hours (*Zoom*)"
 
 - date: 2021-06-24
