--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -5,7 +5,7 @@
     - name: "17:00 Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2021-06-14
-  name: "<b>Introduction and Ethics</b>"
+  name: "<b>Introduction and Applied Ethics</b>"
   events:
     - name: "12.30 - 13.00 Introduction and logistics: [Slides](https://drive.google.com/file/d/14YdMYr3_5HHOAcZS5eY_nyQkSQhnwi08/view?usp=sharing) (*Zoom*)"
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
@@ -51,14 +51,14 @@
     - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
     
 - date: 2021-06-18
-  name: "<b>Network Analysis in Law</b>"
+  name: "<b>Predictions and Systematic Literature Review</b>"
   events:
-    - name: "12.00 - 13.00 Lecture on network analysis [Slides](https://drive.google.com/file/d/1iZOVj0Y7aj762cEzFLp2hYajJiNCiqT2/view?usp=sharing) (*Zoom*)" 
+    - name: "12.00 - 13.00 Lecture on prediction studies in law  (*Zoom*)" 
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)" 
     - name: "14.00 - 14.30 Break"
-    - name: "14.30 - 16.00 Workshop: Introduction Gephi: [Lesson Plan](https://drive.google.com/file/d/1yjDA-Fyw1WT2-p65kvIfOzniX5ifaITI/view) (*Zoom*)"
+    - name: "14.30 - 16.00 Systematic Literature Review (*Zoom*)"
     - name: "16.00 - 16.30 Break"
-    - name: "16.30 - 18.30 Group exercise: [Lesson Plan](https://drive.google.com/file/d/1yjDA-Fyw1WT2-p65kvIfOzniX5ifaITI/view) (*Zoom*)"
+    - name: "16.30 - 18.30 Group exercise (*Zoom*)"
     - name: "18.30 - 19.00 Reporting back the results of group exercises (*Zoom*)"
     
 - date: 2021-06-19
