--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -1,4 +1,4 @@
-- date: Provisional schecule. All times are in Central European Summer Time
+- date: Provisional schedule. All times are in Central European Summer Time
 
 - date: 2021-06-13
   events:
@@ -7,7 +7,7 @@
 - date: 2021-06-14
   name: "<b>Introduction and Applied Ethics</b>"
   events:
-    - name: "12.30 - 13.00 Introduction and logistics: [Slides](https://drive.google.com/file/d/14YdMYr3_5HHOAcZS5eY_nyQkSQhnwi08/view?usp=sharing) (*Zoom*)"
+    - name: "12.30 - 13.00 Introduction and logistics (*Zoom*)"
     - name: "13.00 - 14.00 Small group lunches (*Zoom*)"
     - name: "14.00 - 14.30 Break"
     - name: "14.30 - 15.30 Guest speaker (*Zoom*)"
