--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -6,45 +6,45 @@
 - date: 2021-06-14
   name: Introduction and Ethics
   events:
-    - name: "10:00 - 11:00 Introduction and logistics (*Zoom*)"
-    - name: "11:00 - 12:00 Small group discussions (*Zoom*)"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
+    - name: "10:00 - 11:00 Introduction and logistics"
+    - name: "11:00 - 12:00 Small group discussions"
+    - name: "12:00 - 1:00 Small group lunches (optional)"
     - name: "1:30 - 3:15 Small Group Exercise on Ethics"
-    - name: "3:30 - 5:00 Talk from Vivek Singh (*Zoom*)"
+    - name: "3:30 - 5:00 Talk from Vivek Singh"
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
   events:
-    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
-    - name: "10:15 - 12:00 Designing a Research Question with Digital Trace Data (*Zoom*)"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
-    - name: "1:00 - 3:15 Collecting Digital Trace Data (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise"
+    - name: "10:15 - 12:00 Designing a Research Question with Digital Trace Data"
+    - name: "12:00 - 1:00 Small group lunches (optional)"
+    - name: "1:00 - 3:15 Collecting Digital Trace Data"
     - name: "3:30 -  Possible Guest Speaker"
 
 - date: 2021-06-16
   name: Automated Text Analysis
   events:
-    - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
-    - name: "10:15 - 12:00 Group Exercise (*Zoom*)"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
-    - name: "1:15 - 3:30 Group Exercise (*Zoom*)"
-    - name: "3:30 - Talk by Chris Fariss (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and introduction to group exercise"
+    - name: "10:15 - 12:00 Group Exercise"
+    - name: "12:00 - 1:00 Small group lunches (optional)"
+    - name: "1:15 - 3:30 Group Exercise"
+    - name: "3:30 - Talk by Chris Fariss"
 
 - date: 2021-06-17
   name: Machine Learning
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics"
     - name: "10:15 - 12:00 Live Tutorials on Machine Learning"
-    - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
-    - name: "1:15 - 3:30 Afternoon group exercise (*Zoom*)"
+    - name: "12:00 - 1:00 Small group lunches (optional)"
+    - name: "1:15 - 3:30 Afternoon group exercise"
     - name: "3:30 - Talk by In Song Kim"
 
 - date: 2021-06-18
   name: (Morning) Surveys and Experiments 
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 12:00 Group Exercise (*Zoom*)"
-    - name: "12:30 - 2:00 Talk by Dan Nielson (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics"
+    - name: "10:15 - 12:00 Group Exercise"
+    - name: "12:30 - 2:00 Talk by Dan Nielson"
 
 - date: 2021-06-18
   name: (Afternoon) Network Analysis 
@@ -67,21 +67,21 @@
 - date: 2021-06-21
   name: (Afternoon) Form Research Groups
   events:
-    - name: "1:15 - 3:15 Research Speed Networking (*Zoom*)"
-    - name: "3:15 - 4:30 Form Research Teams (*Zoom*)"
+    - name: "1:15 - 3:15 Research Speed Networking"
+    - name: "3:15 - 4:30 Form and Meet with Research Teams"
 
 - date: 2021-06-22
-  name: Work on group projects 
+  name: Work on group projects: 9am-5pm
   events:
     - name: "12:30 - 2:00 Talk by Zhanna Terechshenko
 
 - date: 2021-06-23
-  name: Work on group projects
+  name: Work on group projects: 9am-5pm
   events:
     - name: "12:30 - 2:00 Talk by Munmun De Choudhury
 
 - date: 2021-06-24
-  name: Work on group projects 
+  name: Work on group projects: 9am-5pm
   events:
     - name: "12:30 - 2:00 Talk by Hana Shepherd
 
