--- a/_data/2021/rutgers/speakers.yml
+++ b/_data/2021/rutgers/speakers.yml
@@ -8,6 +8,11 @@
   bio: "Christopher Fariss is Assistant Professor in the Department of Political Science at the University of Michigan."
   website: http://cfariss.com/
 
+- name: In Song Kim
+  image: /assets/images/InSongKim.jpeg
+  bio: "In Song Kim is Associate Professor of Political Science and a Faculty Affiliate of the Institute for Data, Systems, and Society at Massachusetts Institute of Technology."
+  website: http://web.mit.edu/insong/www/
+  
 - name: Daniel Nielson
   image: /assets/images/DanNielson.jpg
   bio: "Daniel Nielson is Professor of Government at the University of Texas at Austin."
