--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -61,7 +61,7 @@
   name: (Morning) Network Analysis Continued
   events:
     - name: "10:00 - 12:00 Network Analysis Exercises"
-    - name: "12:15- 1:30 Talk by Matthew Weber"
+    - name: "12:15 - Talk by Matthew Weber"
 
 
 - date: 2021-06-21
@@ -71,19 +71,19 @@
     - name: "3:15 - 4:30 Form and Meet with Research Teams"
 
 - date: 2021-06-22
-  name: Work on group projects: 9am-5pm
+  name: Work on group projects
   events:
-    - name: "12:30 - 2:00 Talk by Zhanna Terechshenko
+    - name: "12:30 - 2:00 Talk by Zhanna Terechshenko"
 
 - date: 2021-06-23
-  name: Work on group projects: 9am-5pm
+  name: Work on group projects
   events:
-    - name: "12:30 - 2:00 Talk by Munmun De Choudhury
+    - name: "12:30 - 2:00 Talk by Munmun De Choudhury"
 
 - date: 2021-06-24
-  name: Work on group projects: 9am-5pm
+  name: Work on group projects
   events:
-    - name: "12:30 - 2:00 Talk by Hana Shepherd
+    - name: "12:30 - 2:00 Talk by Hana Shepherd"
 
 - date: 2021-06-25
   name: Present group projects
