--- a/_data/2021/princeton/participants.yml
+++ b/_data/2021/princeton/participants.yml
@@ -25,12 +25,12 @@
 
 - name: Ajua Duker
   image: /assets/images/Ajua_Duker.jpeg
-  bio: Ajua Duker is a fourth-year PhD student at Yale University primarily working under Dr. Jennifer Richeson. Ajua's research is primarily focused on the link between discrimination and health disparities. In her most recent work, she leverages the emotion regulation literature to test different emotion regulation strategies as interventions that might offset the deleterious affective outcomes that follow contending with past experiences of discrimination.
+  bio: Ajua Duker is a fourth-year PhD student at Yale University primarily working under Dr. Jennifer Richeson. "Ajua's" research is primarily focused on the link between discrimination and health disparities. In her most recent work, she leverages the emotion regulation literature to test different emotion regulation strategies as interventions that might offset the deleterious affective outcomes that follow contending with past experiences of discrimination.
   website: https://scholar.google.com/citations?user=8VpQZAgAAAAJ&hl=en
 
 - name: Orestes Hastings
   image: /assets/images/Pat_Hastings.png
-  bio: Orestes "Pat" Hastings is an Assistant Professor of Sociology at Colorado State University. He received his PhD in Sociology from the University of California, Berkeley. Pat's research broadly explores the mechanisms and processes through which economic inequalities become social inequalities, especially in the contexts of the families and parenting.
+  bio: Orestes "Pat" Hastings is an Assistant Professor of Sociology at Colorado State University. He received his PhD in Sociology from the University of California, Berkeley. "Pat's" research broadly explores the mechanisms and processes through which economic inequalities become social inequalities, especially in the contexts of the families and parenting.
   website: https://ophastings.com
 
 - name: Matt Hauer
@@ -53,7 +53,7 @@
 
 - name: Katherine Keith
   image: /assets/images/Katherine_Keith.jpeg
-  bio: Katherine Keith is a final-year PhD student in the College of Information and Computer Sciences at the University of Massachusetts Amherst. Working with her advisor, Brendan O'Connor, her research expands methods in machine learning and natural language processing to social data science goals including: obtaining social measurements from text data, aggregating said measurements in a statistically rigorous manner, and improving causal estimations from text. She has also applied these NLP methods to applications such automatic event extraction from news archives and studying the language of economic decision making.
+  bio: Katherine Keith is a final-year PhD student in the College of Information and Computer Sciences at the University of Massachusetts Amherst. Working with her advisor, Brendan "O'Connor", her research expands methods in machine learning and natural language processing to social data science goals including: obtaining social measurements from text data, aggregating said measurements in a statistically rigorous manner, and improving causal estimations from text. She has also applied these NLP methods to applications such automatic event extraction from news archives and studying the language of economic decision making.
   website: https://kakeith.github.io/
 
 - name: Allison Koh
