Princeton participant bios 3

--- a/_data/2021/princeton/participants.yml
+++ b/_data/2021/princeton/participants.yml
@@ -22,3 +22,8 @@
   image: /assets/images/Sebastian_Deri.jpeg
   bio: Sebastian is interested in anything that involves using data to understand issues at the intersection of the internet and society. He’s a PhD student at Cornell in psychology, and considers himself a generalist social scientist. Check out his <a href="http://sebastianderi.com/">website</a> for some of his recent projects.
   website: http://sebastianderi.com/
+
+- name: Ajua Duker
+  image: /assets/images/Ajua_Duker.jpeg
+  bio: "Ajua Duker is a fourth-year PhD student at Yale University primarily working under Dr. Jennifer Richeson. Ajua's research is primarily focused on the link between discrimination and health disparities. In her most recent work, she leverages the emotion regulation literature to test different emotion regulation strategies as interventions that might offset the deleterious affective outcomes that follow contending with past experiences of discrimination." 
+  website: https://scholar.google.com/citations?user=8VpQZAgAAAAJ&hl=en
